# celery-map-reduce

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.py
