[tool.poetry]
name = "celery_groups"
version = "0.1.0"
description = ""
authors = ["Chris Coutinho <c.coutinho@focuscura.nl>"]

[tool.poetry.dependencies]
python = "^3.6"
celery = "^4.4.2"
sqlalchemy = "^1.3.15"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"
flower = "^0.9.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
