[tool.poetry]
name = "2020.04.06-celery-map-reduce"
version = "0.1.0"
description = ""
authors = ["Chris Coutinho <c.coutinho@focuscura.nl>"]

[tool.poetry.dependencies]
python = "^3.7"
celery = "^4.4.2"
sqlalchemy = "^1.3.16"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
